# tinybvh

./: CMakeLists.txt  LICENSE  README.md  RunCMakeMSVC.bat
include/: bvh.h  bvhforward.h
source/: Main.cpp  bvhtest.cpp  camera.cpp  camera.h  utils.cpp  utils.h
